# application-services

./: settings.gradle
automation/taskcluster/: decision_task.py
components/fxa-client/: Cargo.toml  build.rs
components/fxa-client/android/: build.gradle
components/fxa-client/android/src/main/java/org/mozilla/appservices/fxaclient/: AccessTokenInfo.kt  Config.kt  FirefoxAccount.kt  FxaException.kt  Profile.kt
components/fxa-client/android/src/main/java/org/mozilla/appservices/fxaclient/rust/: LibFxAFFI.kt  RustError.kt
components/fxa-client/android/src/main/java/org/mozilla/fxaclient/internal/: AccountEvent.kt  Device.kt  FirefoxAccount.kt  FxaClient.kt
components/fxa-client/ffi/src/: lib.rs
components/fxa-client/src/: device.rs  ffi.rs  http_client.rs  lib.rs  msg_types.proto  profile.rs  send_tab.rs
components/push/: Cargo.toml
components/push/android/: build.gradle
components/push/android/src/main/java/org/mozilla/push/: LibPushFFI.kt  PushConnection.kt  PushManager.kt  RustError.kt
components/push/communications/src/: lib.rs
components/push/config/src/: lib.rs
components/push/crypto/: Cargo.toml
components/push/crypto/src/: lib.rs
components/push/error/: Cargo.toml
components/push/error/src/: lib.rs
components/push/ffi/: Cargo.toml
components/push/ffi/src/: lib.rs
components/push/src/: lib.rs
components/push/storage/src/: db.rs
components/push/subscriber/src/: lib.rs
megazords/lockbox/android/: build.gradle
