[package]
name = "push"
edition = "2018"
version = "0.1.0"
authors = ["jrconlin <me+crypt@jrconlin.com>"]

[dependencies]
communications={path = "communications"}
crypto={path = "crypto"}
storage={path = "storage"}
error={path= "error"}
config={path="config"}
ffi={path="ffi"}

#[workspace]
#members = ["communications", "crypto", "storage",  "error", "config", "ffi"]
# extra members = ["delivery_mgr", "notifier", "subscriber",]
